--- a/style.css
+++ b/style.css
@@ -218,6 +218,16 @@ body {
   width: 85%;
 }
 
+#redrawDiv {
+  text-align: center;
+}
+
+#redrawDiv > a > img {
+  margin-top: 10px;
+  width: 85%;
+}
+
+
 #drawClicker {
   z-index: 3;
   margin-left: 75%;
@@ -229,4 +239,39 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
+}
+
+#redrawClicker {
+  z-index: 3;
+  margin-left: 66%;
+  margin-top: 20px;
+  background-image: url('images/clicker.png');
+  position: absolute;
+  width: 32px;
+  height: 40px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+
+#infoDiv {
+  max-width: 400px;
+  height: 21.5%;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: url('images/info.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#resultDiv{
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  border-color: #000;
+  border-width: 3px;
+  border-style: solid;
 }
