--- a/style.css
+++ b/style.css
@@ -13,6 +13,22 @@ input {
   padding-right: 5px;
   position:relative;
   pointer-events: auto;
+  line-height: 35px;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 18px;
+  border-width: 0;
+}
+
+input::-webkit-input-placeholder {
+  color: #ccc;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+a{
+  pointer-events: auto;
 }
 
 *{
@@ -237,6 +253,7 @@ body {
 #redrawDiv > a > img {
   margin-top: 10px;
   width: 85%;
+  max-width: 340px;
 }
 
 
